# Veridoc

./: .coderabbit.yaml  .dockerignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cicd.yaml
VeriDoc/frontend/: package.json
VeriDoc/frontend/src/: App.jsx  styles.css
VeriDoc/frontend/src/components/: Login.jsx  QueryInterface.jsx  ResultDisplay.jsx  Signup.jsx
backend/: .env.example  app.py  config.py  index_documents.py  main.py  pyproject.toml  requirements.runtime.txt  requirements.txt  test_db.py
backend/api/: audio_routes.py  auth_routes.py  document_routes.py  query_routes.py
backend/chroma_vectorestore/: chroma.sqlite3
backend/models/: database.py  schemas.py
backend/scripts/: reset_status.py
backend/services/: bedrock_service.py  document_service.py  elevenlabs_service.py
backend/tests/: test_vector_db.py
backend/utils/: auth.py
docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AppSidebar.jsx  DocumentUpload.jsx  LiveMode.jsx  ThemeToggle.jsx
frontend/src/components/auth/: PublicRoute.jsx
frontend/src/components/ui/: alert-dialog.jsx  button.jsx
frontend/src/pages/: AdminPanel.jsx  DashboardPage.jsx  LandingPage.jsx  LoginPage.jsx  Profile.jsx  Settings.jsx  SignupPage.jsx
frontend/src/services/: api.js  audioService.js  authService.js  userService.js
